@@ -35,6 +35,7 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2007-01-04 DP  1.6.2  Refresh database objects correctly, per Guy Rouillier.
 2006-12-28 DP  1.8.0  Add a 'Run Now' options for pgAgent jobs.
 2006-12-28 DP  1.8.0  Retain the clipboard contents on app exit.
 2006-12-28 DP  1.8.0  Add an option to show NULLs as <NULL> in the Query Tool.
